--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -45,12 +46,19 @@
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/runtime": "^7.26.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-refresh": "^0.16.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
